# innomightlabs-cli

./: .gitignore  LICENSE  README.md  build.py  command_processor.py  innomightlabs-cli.spec  main.py  pyproject.toml
.github/workflows/: release-artifacts.yml  release.yml
agents/: base_agent.py  krishna_agent.py  watcher_agent.py
agents/plan_act_observe_agent/: plan_act_observe_agent.py  plan_act_observe_agent_model.py
common/: containers.py  decorators.py  models.py  utils.py
common/file_watcher/: __init__.py  base.py  manager.py  metadata.py
conversation_manager/: base_conversation_manager.py  sliding_window_conversation_manager.py  token_aware_conversation_manager.py
prompts/: file_watcher_command_system_instructions.md  intuitive_knowledge.md  plan_act_observe_agent_system_instructions.md  planner_agent_system_instructions.md
release/: innomightlabs-cli-macos-arm64-20251016-092259.sha256
tests/: __init__.py  conftest.py  test_main.py
text_embedding/: base_text_embedder.py  ollama_text_embedder.py
tools/: file_system_tool.py  file_watcher.py  file_watcher_tools.py  memory_tool.py  send_message.py  shell_tool.py  sub_agent_tools.py  todo_tool.py
