[project]
name = "innomightlabs-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dependency-injector>=4.48.2",
    "langchain-aws>=0.2.35",
    "loguru>=0.7.3",
    "ollama>=0.6.0",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "rich>=14.1.0",
    "tiktoken>=0.12.0",
]
[project.scripts]
innomightlabs-cli = "main:main"



[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyinstaller>=6.16.0",
    "types-colorama>=0.4.15.20250801",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]


[tool.mypy]
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
namespace_packages = true
